--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
       </section>
       <section class="ui-section-customer">
-        <div class="ui-layout-container">
+        <!-- <div class="ui-layout-container">
           <div class="ui-section-customer__layout ui-layout-flex">
             <img src="https://res.cloudinary.com/uisual/image/upload/assets/logos/facebook.svg" alt="#" class="ui-section-customer--logo">
             <img src="https://res.cloudinary.com/uisual/image/upload/assets/logos/pinterest.svg" alt="#" class="ui-section-customer--logo">
@@ -93,7 +93,9 @@
             <img src="https://res.cloudinary.com/uisual/image/upload/assets/logos/dribbble.svg" alt="#" class="ui-section-customer--logo">
             <img src="https://res.cloudinary.com/uisual/image/upload/assets/logos/behance.svg" alt="#" class="ui-section-customer--logo ui-section-customer--logo-bhn">
           </div>
-        </div>
+        </div> -->
+
+    
       </section>
       <section class="ui-section-feature">
         <div class="ui-layout-container">
@@ -236,7 +238,7 @@
       <div class="ui-layout-container">
         <div class="ui-section-footer__layout ui-layout-flex">
           <!-- COPYRIGHT -->
-          <p class="ui-section-footer--copyright ui-text-note"><small>&copy; 0000 Uisual</small></p>
+          <p class="ui-section-footer--copyright ui-text-note"><small>&copy; SignLingo TEAM</small></p>
           <!-- MENU -->
           <a href="#" role="link" aria-label="#">
             <svg viewBox="0 0 24 24" height="16" width="16" fill="none" stroke="#AEAEAE" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" role="img" aria-label="#">
