--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <!-- META -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <meta name="uisual" content="Made with Uisual (uisual.com)"> -->
     <meta name="author" content="#">
     <meta name="description" content="#">
     <meta name="referrer" content="unsafe-url">
@@ -67,12 +66,11 @@
         <div class="ui-layout-container">
           <div class="ui-section-hero__layout ui-layout-grid ui-layout-grid-2">
             <!-- COPYWRITING -->
-            <div>
+            <div class="a">
               <h1>SignLingo App.</h1>
-            </br> 
-          </br> 
-              <p class="ui-text-intro">A Modern Way To</br> 
-                Learn Sign Languages.</p>
+                </br> 
+               </br>
+              <p class="ui-text-intro">A Modern Way To Learn Sign Languages.</br>Educational app to easily learn sign language.descr descr descr desc descr </p>
               <!-- CTA -->
               <div class="ui-component-cta ui-layout-flex">
                 <a href="#" role="link" aria-label="#" class="ui-component-button ui-component-button-normal ui-component-button-primary">Download App</a>
@@ -97,19 +95,21 @@
 
     
       </section>
+       <h2 class="section-title">Our Features</h2>  
       <section class="ui-section-feature">
         <div class="ui-layout-container">
           <div class="ui-section-feature__layout ui-layout-grid ui-layout-grid-2">
             <!-- IMAGE -->
-            <img src="https://res.cloudinary.com/uisual/image/upload/assets/devices/ipad.png" alt="#" class="ui-image-half-left">
+            <img src="img/phone.jpg" alt="#" class="ui-image-half-left" height="350px" width="350px">
             <!-- FEATURE -->
+            
             <div>
-              <h2>Nice Features</h2>
-              <p class="ui-text-intro">Lorem ipsum dolor sit amet, consec adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim ad minim veniam, quis nostrud exercitation ullamco nisi equi.</p>
+              <h2>Features</h2>
+              <p class="ui-text-intro">texttexttttttttttttttttttttttttttttttttt</br>tttttttttttttttttttttttttttttttttttt</p>
               <ul class="ui-component-list ui-component-list-feature ui-layout-grid">
-                <li class="ui-component-list--item ui-component-list--item-check">Unlimited domain names.</li>
-                <li class="ui-component-list--item ui-component-list--item-check">150&plus; components.</li>
-                <li class="ui-component-list--item ui-component-list--item-check">Lifetime updates.</li>
+                <li class="ui-component-list--item ui-component-list--item-check">texxtttt</li>
+                <li class="ui-component-list--item ui-component-list--item-check">111111&plus;ttt </li>
+                <li class="ui-component-list--item ui-component-list--item-check"> updates.</li>
                 <li class="ui-component-list--item ui-component-list--item-check">24/7 technical support.</li>
               </ul>
             </div>
@@ -117,91 +117,96 @@
           <div class="ui-section-feature__layout ui-layout-grid ui-layout-grid-2">
             <!-- FEATURE -->
             <div>
-              <h2>Nice Features</h2>
-              <p class="ui-text-intro">Lorem ipsum dolor sit amet, consec adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim ad minim veniam, quis nostrud exercitation ullamco nisi equi.</p>
+              <h2> Features</h2>
+              <p class="ui-text-intro">txxxxxxxxxxxxxxxxxxxxxxxxxxxtttxxtt</br>brxtxtxtxtxtxtxtxttxtxtxtxtxttxxt</p>
               <ul class="ui-component-list ui-component-list-feature ui-layout-grid">
-                <li class="ui-component-list--item ui-component-list--item-check">Unlimited domain names.</li>
-                <li class="ui-component-list--item ui-component-list--item-check">150&plus; components.</li>
-                <li class="ui-component-list--item ui-component-list--item-check">Lifetime updates.</li>
+                <li class="ui-component-list--item ui-component-list--item-check">textt</li>
+                <li class="ui-component-list--item ui-component-list--item-check">111111&plus; tttt</li>
+                <li class="ui-component-list--item ui-component-list--item-check">updates.</li>
                 <li class="ui-component-list--item ui-component-list--item-check">24/7 technical support.</li>
               </ul>
             </div>
             <!-- IMAGE -->
-            <img src="https://res.cloudinary.com/uisual/image/upload/assets/devices/ipad.png" alt="#" class="ui-image-half-right">
+            <img src="img/phone.jpg" alt="#" class="ui-image-half-right" height="350px" width="350px">
           </div>
         </div>
       </section>
       <section class="ui-section-pricing">
         <div class="ui-layout-container">
-          <h2>Fair Prices</h2>
-          <p class="ui-text-intro">Lorem ipsum dolor sit amet.</p>
+          <h2 class="section-title">Ready to start?</h2></br>
+          <p class="ui-text-intro"> Join us now with BETA version</p>
+          <div class="ui-component-cta ui-layout-flex">
+            <a href="#" role="link" aria-label="#" class="ui-component-button ui-component-button-normal ui-component-button-primary">Get Started for Free</a>
+            <p class="ui-text-note"><small>30 days free trial.</small></p>
+          </div>
           <!-- TOGGLE -->
-          <input type="radio" name="toggle" id="ui-component-toggle__monthly" checked>
+          <!-- <input type="radio" name="toggle" id="ui-component-toggle__monthly" checked>
           <input type="radio" name="toggle" id="ui-component-toggle__yearly">
           <div class="ui-component-toggle ui-layout-flex">
             <label for="ui-component-toggle__monthly" class="ui-component-toggle--label">Billed Monthly</label>
             <label for="ui-component-toggle__yearly" class="ui-component-toggle--label">Billed Yearly</label>
           </div>
-          <p class="ui-text-note"><small>Save 15% with a yearly plan.</small></p>
+          <p class="ui-text-note"><small>Save 15% with a yearly plan.</small></p> -->
           <!-- PRICING -->
-          <div class="ui-section-pricing__layout ui-layout-grid ui-layout-grid-3">
+          <!-- <div class="ui-section-pricing__layout ui-layout-grid ui-layout-grid-3">
             <div class="ui-component-card ui-component-card--pricing">
-              <span><strong>Basic</strong></span>
+              <span><strong>Basic</strong></span> -->
               <!-- AMOUNT -->
-              <div class="ui-component-card--pricing-price">
+              <!-- <div class="ui-component-card--pricing-price">
                 <span class="ui-component-card--pricing-amount ui-component-card--pricing-amount-1"></span>
                 <span>/</span>
                 <span>month</span>
               </div>
-              <span><small>Perfect for early-stage startups.</small></span>
+              <span><small>Perfect for early-stage startups.</small></span> -->
               <!-- LIST -->
-              <ul class="ui-component-list ui-component-list--pricing ui-layout-grid">
+              <!-- <ul class="ui-component-list ui-component-list--pricing ui-layout-grid">
                 <li class="ui-component-list--item ui-component-list--item-check">1 domain name.</li>
                 <li class="ui-component-list--item ui-component-list--item-check">HTML components.</li>
                 <li class="ui-component-list--item ui-component-list--item-cross">Priority support.</li>
-              </ul>
+              </ul> -->
               <!-- CTA -->
-              <a href="#" class="ui-component-button ui-component-button-big ui-component-button-secondary" role="link" aria-label="#">Get Started</a>
+              <!-- <a href="#" class="ui-component-button ui-component-button-big ui-component-button-secondary" role="link" aria-label="#">Get Started</a>
             </div>
             <div class="ui-component-card ui-component-card--pricing">
-              <span><strong>Standard</strong></span>
+              <span><strong>Standard</strong></span> -->
               <!-- AMOUNT -->
-              <div class="ui-component-card--pricing-price">
+              <!-- <div class="ui-component-card--pricing-price">
                 <span class="ui-component-card--pricing-amount ui-component-card--pricing-amount-2"></span>
                 <span>/</span>
                 <span>month</span>
               </div>
-              <span><small>Perfect for early-stage startups.</small></span>
+              <span><small>Perfect for early-stage startups.</small></span> -->
               <!-- LIST -->
-              <ul class="ui-component-list ui-component-list--pricing ui-layout-grid">
+              <!-- <ul class="ui-component-list ui-component-list--pricing ui-layout-grid">
                 <li class="ui-component-list--item ui-component-list--item-check">1 domain name.</li>
                 <li class="ui-component-list--item ui-component-list--item-check">HTML components.</li>
                 <li class="ui-component-list--item ui-component-list--item-check">Priority support.</li>
-              </ul>
+              </ul> -->
               <!-- CTA -->
-              <a href="#" class="ui-component-button ui-component-button-big ui-component-button-primary" role="link" aria-label="#">Get Started</a>
+              <!-- <a href="#" class="ui-component-button ui-component-button-big ui-component-button-primary" role="link" aria-label="#">Get Started</a>
             </div>
             <div class="ui-component-card ui-component-card--pricing">
-              <span><strong>Special</strong></span>
+              <span><strong>Special</strong></span> -->
               <!-- AMOUNT -->
-              <div class="ui-component-card--pricing-price">
+              <!-- <div class="ui-component-card--pricing-price">
                 <span class="ui-component-card--pricing-amount ui-component-card--pricing-amount-3"></span>
                 <span>/</span>
                 <span>month</span>
               </div>
-              <span><small>Perfect for early-stage startups.</small></span>
+              <span><small>Perfect for early-stage startups.</small></span> -->
               <!-- LIST -->
-              <ul class="ui-component-list ui-component-list--pricing ui-layout-grid">
+              <!-- <ul class="ui-component-list ui-component-list--pricing ui-layout-grid">
                 <li class="ui-component-list--item ui-component-list--item-check">1 domain name.</li>
                 <li class="ui-component-list--item ui-component-list--item-check">HTML components.</li>
                 <li class="ui-component-list--item ui-component-list--item-check">Priority support.</li>
-              </ul>
+              </ul> -->
               <!-- CTA -->
-              <a href="#" class="ui-component-button ui-component-button-big ui-component-button-secondary" role="link" aria-label="#">Get Started</a>
+              <!-- <a href="#" class="ui-component-button ui-component-button-big ui-component-button-secondary" role="link" aria-label="#">Get Started</a>
             </div>
-          </div>
+          </div> -->
           <!-- NOTE -->
-          <p>Have questions? <a href="#" role="link" aria-label="#">Contact us</a>.</p>
+        </br>
+          <p>Have questions? <a href="#" role="link" aria-label="#"> <strong>Contact us</strong></a>.</p>
         </div>
       </section>
       <section class="ui-section-testimonial">
@@ -223,7 +228,7 @@
       <section class="ui-section-close">
         <div class="ui-layout-container">
           <div class="ui-layout-column-6 ui-layout-column-center">
-            <h2>Ready to start?</h2>
+            <h2 class="section-title">Contact Us</h2>
             <p class="ui-text-intro">Lorem ipsum dolor sit amet consectetur.</p>
             <!-- CTA -->
             <div class="ui-component-cta ui-layout-flex">
@@ -240,12 +245,12 @@
           <!-- COPYRIGHT -->
           <p class="ui-section-footer--copyright ui-text-note"><small>&copy; SignLingo TEAM</small></p>
           <!-- MENU -->
-          <a href="#" role="link" aria-label="#">
+          <a href="https://twitter.com/deafyDev" role="link" aria-label="#">
             <svg viewBox="0 0 24 24" height="16" width="16" fill="none" stroke="#AEAEAE" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" role="img" aria-label="#">
               <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"/>
             </svg>
           </a>
-          <a href="#" role="link" aria-label="#">
+          <a href="https://instagram.com/signlingo_team?igshid=YmMyMTA2M2Y=" role="link" aria-label="#">
             <svg viewBox="0 0 24 24" height="16" width="16" fill="none" stroke="#AEAEAE" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" role="img" aria-label="#">
               <rect width="20" height="20" x="2" y="2" rx="5" ry="5"/>
               <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zM17.5 6.5h.01"/>
