--- a/index.html
+++ b/index.html
@@ -37,16 +37,19 @@
       <div class="ui-layout-container">
         <div class="ui-section-header__layout ui-layout-flex">
           <!-- LOGO -->
-          <a href="#" role="link" aria-label="#" class="ui-section-header--logo">
-            <!-- <img src="img/logorm.png" viewBox="0 0 18 18"  height="100" width="100" > -->
-            <object data="img/logosvg.svg"> </object>
 
-            <div class="top-left"> <h3>SignLingo</h3></div>
+          <!-- <a href="#" role="link" aria-label="#" class="ui-section-header--logo"> -->
+            <!-- <img src="img/logorm.png" viewBox="0 0 18 18"  height="100" width="100" > -->
+            <!-- <img src="img/resizedlogo.svg" alt="#" class="ui-image-half-left"> -->
+            <div><a href="#" id="lg"><img alt="logo" src="img/resizedlogo.svg"><strong>SignLingo</strong></a>
+            </div>
+          <!-- <a href="#" id="lg"><img alt="logo" src="img/resizedlogo.svg"> <strong>SignLingo</strong></a> -->
+            <!-- <div class="top-left"> <h3>SignLingo</h3></div> -->
 
             <!-- <svg viewBox="0 0 18 18" height="18" width="18" role="img" aria-label="#">
               <path fill="#353535" d="M0 0h4.5v9a4.5 4.5 0 109 0V6H18v3A9 9 0 110 9V0zm18 4.5V0h-4.5v4.5H18z"/>
             </svg> -->
-          </a>
+         
           <!-- HAMBURGER -->
           <input type="checkbox" id="ui-section-header--menu-id">
           <label for="ui-section-header--menu-id" class="ui-section-header--menu-icon"></label>
@@ -208,7 +211,7 @@
           </div> -->
           <!-- NOTE -->
         </br>
-          <p>Have questions? <a href="#" role="link" aria-label="#"> <strong>Contact us</strong></a>.</p>
+          <p>Have questions? <a href="#contact" role="link" aria-label="#">   <strong>Contact us</strong></a></p>
         </div>
       </section>
       
