--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
           <!-- <a href="#" role="link" aria-label="#" class="ui-section-header--logo"> -->
             <!-- <img src="img/logorm.png" viewBox="0 0 18 18"  height="100" width="100" > -->
             <!-- <img src="img/resizedlogo.svg" alt="#" class="ui-image-half-left"> -->
-            <div><a href="#" id="lg"><img alt="logo" src="img/resizedlogo.svg"><strong>SignLingo</strong></a>
-            </div>
+            <div><b><img alt="logo" src="img/resizedlogo.svg">SignLingo </b></div>
           <!-- <a href="#" id="lg"><img alt="logo" src="img/resizedlogo.svg"> <strong>SignLingo</strong></a> -->
             <!-- <div class="top-left"> <h3>SignLingo</h3></div> -->
 
@@ -211,7 +210,7 @@
           </div> -->
           <!-- NOTE -->
         </br>
-          <p>Have questions? <a href="#contact" role="link" aria-label="#">   <strong>Contact us</strong></a></p>
+          <p>Have questions?<a href="#contact" role="link" aria-label="#"><strong>Contact us</strong></a></p>
         </div>
       </section>
       
