--- a/index.html
+++ b/index.html
@@ -853,8 +853,7 @@
             <h3>Support</h3>
             <ul class="links">
               <li> <a href="javascript:void(0)">About Us</a> </li>
-              <li> <a href="javascript:void(0)">Privacy Policy</a> </li>
-              <li> <a href="privacy.html">Terms of Service</a> </li>
+              <li> <a href="privacy.html">Privacy Policy</a> </li>
             </ul>
           </div>
         </div>
