--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                 class="h-170px] relative z-10 mx-auto mb-6 w-[170px] rounded-full"
               >
                 <img
-                  src="img/avatar.jpg"
+                  src="img/ross_page.jpg"
                   alt="image"
                   class="w-full rounded-full"
                 />
