--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                 class="h-170px] relative z-10 mx-auto mb-6 w-[170px] rounded-full"
               >
                 <img
-                  src="img/1.jpg"
+                  src="img/ala.jpg"
                   alt="image"
                   class="w-full rounded-full"
                 />
