--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <body>
 
    <!-- ========================= preloader start ========================= -->
-    <div class="preloader">
+    <!-- <div class="preloader">
     <div class="loader">
       <div class="ytp-spinner">
         <div class="ytp-spinner-container">
@@ -53,7 +53,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- preloader end -->
   
 
@@ -81,13 +81,15 @@
                   <a class="page-scroll" href="#feature">Feature</a>
                 </li>
                 <li class="nav-item">
+                  <a class="page-scroll" href="#download">Download</a>
+
+                </li>
+                <li class="nav-item">
                   <a class="page-scroll" href="#team">Team</a>
+
                 </li>
                 <li class="nav-item">
                   <a class="page-scroll" href="#Contact">Contact</a>
-                </li>
-                <li class="nav-item">
-                  <a class="page-scroll" href="#download">Download</a>
                   
                 </li>
               </ul>
@@ -331,7 +333,7 @@
 					</div>
 					<div class="col-lg-6">
 						<div class="download-img mb-50 text-lg-right">
-							<img src="img/playstore.jpg" alt="">
+							<img src="img/playstore.png" alt="">
 						</div>
 					</div>
 				</div>
@@ -863,7 +865,7 @@
   </main>
     <div class="copy-right-wrapper">
       <a href="#">
-        <img src="img/logosvgnew2.svg" class="h-6 mr-3 sm:h-9" alt="" />
+        <img src="img/logosvgbg.svg" class="h-6 mr-3 sm:h-9" alt="" />
     </a>
     <span class="block text-sm text-center text-gray-500 dark:text-gray-400">2023 <a href="#">SignLingo™</a> .All Rights Reserved ©
     </span>  </div>
