--- a/privacy.html
+++ b/privacy.html
@@ -227,7 +227,7 @@ The app does use third party services that may collect information used to ident
     </main>
       <div class="copy-right-wrapper">
         <a href="#">
-          <img src="img/logosvgnew2.svg" class="h-6 mr-3 sm:h-9" alt="" />
+          <img src="img/logosvgbg.svg" class="h-6 mr-3 sm:h-9" alt="" />
       </a>
       <span class="block text-sm text-center text-gray-500 dark:text-gray-400">2023 <a href="#">SignLingo™</a> .All Rights Reserved ©
       </span>  </div>
@@ -243,9 +243,7 @@ The app does use third party services that may collect information used to ident
   
       <script src="script.js" charset="utf-8"></script>
       <script src="main.js"></script>
-      <script src="count-up.min.js"></script>
-      <script src="wow.min.js"></script>
-  
+   
   
     
  
