--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="no-js" lang="">
   <head>
     <!-- META -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-   
-       
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <title>SignLingo</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- SPEED -->
-    <link rel="preconnect" href="https://res.cloudinary.com">
+    <!-- <link rel="preconnect" href="https://res.cloudinary.com">
     <link rel="dns-prefetch" href="https://res.cloudinary.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="dns-prefetch" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com"> -->
     <!-- LINK -->
    
     <link rel="icon" type="image/svg" href="img/logosvg.svg" sizes="48x48">
@@ -20,7 +21,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap">
     <!-- <link rel="preload" as="style" href="css/style.css"> -->
     <!-- <link rel="stylesheet" href="css/style.css"> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"> -->
     <!-- <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/headers/"> -->
     <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
     <!-- <link href="css/headers.css" rel="stylesheet"> -->
@@ -31,8 +32,7 @@
     <link rel="stylesheet" href="css/style.css" />
   
 
-    <!-- TITLE -->
-    <title>SignLingo</title>
+    
   </head>
   <body>
 
@@ -106,9 +106,9 @@
 </header>
 <!-- ========================= header end ========================= -->
 
-<div class="scrollToTop-btn">
+<!-- <div class="scrollToTop-btn">
   <i class="fas fa-angle-up"></i>
-</div>
+</div> -->
         <!-- <div class="ui-layout-container">
           <div class="ui-section-customer__layout ui-layout-flex">
             <img src="https://res.cloudinary.com/uisual/image/upload/assets/logos/facebook.svg" alt="#" class="ui-section-customer--logo">
@@ -870,10 +870,13 @@
   
 </footer>
 
-
+<a href="#" class="scroll-top btn-hover">
+  <i class="lni lni-chevron-up"></i>
+</a>
 
 <!-- ========================= footer end ========================= -->
 
+ <script src="bootstrap.5.0.0.alpha-2-min.js"></script>
 
     <script src="script.js" charset="utf-8"></script>
     <script src="main.js"></script>
