--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 
         <div class="-mx-4 flex flex-wrap justify-center">
           <div class="w-full px-4 sm:w-1/2 lg:w-1/4">
-            <div class="wow fadeInUp mb-10" data-wow-delay=".1s">
+            <div class="wow fadeInUp mb-10">
               <div
                 class="h-170px] relative z-10 mx-auto mb-6 w-[170px] rounded-full"
               >
@@ -396,12 +396,8 @@
                 </span>
               </div>
               <div class="text-center">
-                <h4 class="mb-2 text-lg font-medium text-dark">
-                  Semassel Ala Eddine
-                </h4>
-                <p class="mb-5 text-sm font-medium text-body-color">
-                  Web development & Digital Marketing & Communication
-                </p>
+                <h4 class="mb-2 text-lg font-medium text-dark">Semassel Ala Eddine</h4>
+                <p class="mb-5 text-sm font-medium text-body-color">Web development & Digital Marketing & Communication</p>
                 <div class="flex items-center justify-center">
                   <a
                     href="https://www.linkedin.com/in/ala-eddine-semassel-565220236/" 
@@ -438,7 +434,7 @@
             </div>
           </div>
           <div class="w-full px-4 sm:w-1/2 lg:w-1/4">
-            <div class="wow fadeInUp mb-10" data-wow-delay=".15s">
+            <div class="wow fadeInUp mb-10">
               <div class="h-170px] relative z-10 mx-auto mb-6 w-[170px] rounded-full">
                 <img
                   src="img/ross_page.jpg"
@@ -468,11 +464,8 @@
                 </span>
               </div>
               <div class="text-center">
-                <h4 class="mb-2 text-lg font-medium text-dark">Bouchehit Rostom
-                </h4>
-                <p class="mb-5 text-sm font-medium text-body-color">
-                  System Design & Business research
-                </p>
+                <h4 class="mb-2 text-lg font-medium text-dark">Bouchehit Rostom</h4>
+                <p class="mb-5 text-sm font-medium text-body-color">System Design & Business research</p>
                 <div class="flex items-center justify-center">
                   <a
                     href="https://www.linkedin.com/in/ros-tom-41bb6a268/"
@@ -509,7 +502,7 @@
             </div>
           </div>
           <div class="w-full px-4 sm:w-1/2 lg:w-1/4">
-            <div class="wow fadeInUp mb-10" data-wow-delay=".2s">
+            <div class="wow fadeInUp mb-10">
               <div
                 class="h-170px] relative z-10 mx-auto mb-6 w-[170px] rounded-full"
               >
@@ -543,12 +536,8 @@
                 </span>
               </div>
               <div class="text-center">
-                <h4 class="mb-2 text-lg font-medium text-dark">
-                  Krouma NourElhouda 
-                </h4>
-                <p class="mb-5 text-sm font-medium text-body-color">
-                  Mobile App Developer & AI Developer
-                </p>
+                <h4 class="mb-2 text-lg font-medium text-dark">Krouma NourElhouda </h4>
+                <p class="mb-5 text-sm font-medium text-body-color">Mobile App Developer & AI Developer</p>
                 <div class="flex items-center justify-center">
                   <a
                     href="https://www.linkedin.com/in/nour-krouma-738324226/"
@@ -585,7 +574,7 @@
             </div>
           </div>
           <div class="w-full px-4 sm:w-1/2 lg:w-1/4">
-            <div class="wow fadeInUp mb-10" data-wow-delay=".25s">
+            <div class="wow fadeInUp mb-10">
               <div
                 class="h-170px] relative z-10 mx-auto mb-6 w-[170px] rounded-full"
               >
@@ -618,10 +607,8 @@
                 </span>
               </div>
               <div class="text-center">
-                <h4 class="mb-2 text-lg font-medium text-dark">
-                  Bouakba Oumaima              </h4>
-                <p class="mb-5 text-sm font-medium text-body-color">
-                  AI Developer & UI Design                </p>
+                <h4 class="mb-2 text-lg font-medium text-dark">Bouakba Oumaima</h4>
+                <p class="mb-5 text-sm font-medium text-body-color">AI Developer & UI Design</p>
                 <div class="flex items-center justify-center">
                   <a
                     href="https://www.linkedin.com/in/ouma%C3%AFma-bouakba-a3100b19b/"
@@ -659,7 +646,7 @@
             </div>
           </div>
           <div class="w-full px-4 sm:w-1/2 lg:w-1/4">
-            <div class="wow fadeInUp mb-10" data-wow-delay=".25s">
+            <div class="wow fadeInUp mb-10">
               <div
                 class="h-170px] relative z-10 mx-auto mb-6 w-[170px] rounded-full"
               >
