--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- SPEED -->
-    <!-- <link rel="preconnect" href="https://res.cloudinary.com">
+    <link rel="preconnect" href="https://res.cloudinary.com">
     <link rel="dns-prefetch" href="https://res.cloudinary.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="dns-prefetch" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="dns-prefetch" href="https://fonts.gstatic.com"> -->
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
     <!-- LINK -->
    
     <link rel="icon" type="image/svg" href="img/logosvg.svg" sizes="48x48">
