--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
     <link rel="stylesheet" href="css/bootstrap-5.0.0-alpha-2.min.css" />
     <link rel="stylesheet" href="css/LineIcons.2.0.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/style.css" />
   
 
     
@@ -140,7 +139,7 @@
 					</div>
 					<div class="col-lg-6">
 						<div class="hero-img wow fadeInUp" data-wow-delay=".5s">
-							<img src="img/phone&tab2.svg" alt="">
+							<img src="img/phone&tab.png" alt="">
 						</div>
 					</div>
         </div>
@@ -201,13 +200,13 @@
 <!-- ========================= feature2-section start ========================= -->
 <section id="feature3" class="tracking-section pt-150">
   <div class="tracking-shape">
-    <img src="img/twobluehandssvg.svg" alt="" class="shape shape-1">
+    <img src="img/twobluehands.png" alt="" class="shape shape-1">
   </div>
   <div class="container">
     <div class="row align-items-center">
       <div class="col-lg-6 col-xl-7">
         <div class="tracking-image">
-          <img src="img/categoryy.svg" alt="">
+          <img src="img/categoryy.png" alt="">
         </div>
       </div>
       <div class="col-lg-6 col-xl-5">
@@ -250,7 +249,7 @@
 <!-- ========================= feature3-section start ========================= -->
 <section id="feature2" class="search-section pt-150">
   <div class="search-shape">
-    <img src="img/twobluehandssvg2.svg" alt="" class="shape shape-1">
+    <img src="img/twobluehands.png" alt="" class="shape shape-1">
   </div>
   <div class="container">
     <div class="row align-items-center">
@@ -286,7 +285,7 @@
 
       <div class="col-xl-7 col-lg-6">
         <div class="search-img text-lg-right">
-          <img src="img/quiz.svg" alt="">
+          <img src="img/quiz.png" alt="">
         </div>
       </div>
     </div>
@@ -507,7 +506,7 @@
                 class="h-170px] relative z-10 mx-auto mb-6 w-[170px] rounded-full"
               >
                 <img
-                src="img/avatar.jpg"
+                src="img/avatar.png"
 
                   alt="image"
                   class="w-full rounded-full"
@@ -579,7 +578,7 @@
                 class="h-170px] relative z-10 mx-auto mb-6 w-[170px] rounded-full"
               >
                 <img
-                src="img/avatar.jpg"
+                src="img/avatar.png"
                 alt="image"
                   class="w-full rounded-full"
                 />
@@ -651,7 +650,7 @@
                 class="h-170px] relative z-10 mx-auto mb-6 w-[170px] rounded-full"
               >
                 <img
-                src="img/avatar.jpg"
+                src="img/avatar.png"
                 alt="image"
                   class="w-full rounded-full"
                 />
@@ -863,10 +862,9 @@
 
 <!-- ========================= footer end ========================= -->
 
- <script src="bootstrap.5.0.0.alpha-2-min.js"></script>
+ <script src="js/bootstrap.5.0.0.alpha-2-min.js"></script>
 
-    <script src="script.js" charset="utf-8"></script>
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
 
 
 
