--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <p class="wow fadeInUp" data-wow-delay=".4s">
               Signlingo is an Educational app to easily learn sign language. </p>
             <div class="hero-btns">
-              <a href="#" class="main-btn btn-hover wow fadeInUp" data-wow-delay=".6s">Download App</a>
+              <a href="https://play.google.com/store/apps/details?id=com.startup.deafy&hl=en-GB" class="main-btn btn-hover wow fadeInUp" data-wow-delay=".6s">Download App</a>
               <!-- <a href="https://rebrand.ly/appgrids-gg/" class="main-btn border-btn btn-hover wow fadeInUp" data-wow-delay=".6s">Learn More</a> -->
             </div>
           </div>
@@ -327,7 +327,7 @@
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="https://play.google.com/store/apps/details?id=com.startup.deafy&hl=en-GB">
                   <span class="icon"><i class="lni lni-play-store"></i></span>
                   <span class="text">GET IT ON <b>Play Store</b> </span>
                 </a>
