--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6 col-xl-7">
           <div class="tracking-image">
-            <img src="img/categoryy.png" alt="">
+            <img src="img/categoryyy.png" alt="">
           </div>
         </div>
         <div class="col-lg-6 col-xl-5">
@@ -291,7 +291,7 @@
 
         <div class="col-xl-7 col-lg-6">
           <div class="search-img text-lg-right">
-            <img src="img/quiz.png" alt="">
+            <img src="img/quizz.png" alt="">
           </div>
         </div>
       </div>
@@ -337,7 +337,7 @@
         </div>
         <div class="col-lg-6">
           <div class="download-img mb-50 text-lg-right">
-            <img src="img/playstore.png" alt="">
+            <img src="img/playstoree.png" alt="">
           </div>
         </div>
       </div>
