--- a/privacy.html
+++ b/privacy.html
@@ -59,14 +59,14 @@
                     <li class="nav-item">
                       <a href="index.html#feature">Feature</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                       <a href="index.html#team">Team</a>
+                    </li> -->
+                    <li class="nav-item">
+                      <a href="index.html#download">Download</a>
                     </li>
                     <li class="nav-item">
                       <a href="index.html#Contact">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                      <a href="index.html#download">Download</a>
 
                     </li>
                   </ul>
