--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
   <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
   <!-- <link href="css/headers.css" rel="stylesheet"> -->
 
-  <link rel="stylesheet" href="css/bootstrap-5.0.0-alpha-2.min.css" />
+  <!-- <link rel="stylesheet" href="css/bootstrap-5.0.0-alpha-2.min.css" /> -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha2/dist/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="css/LineIcons.2.0.css" />
   <link rel="stylesheet" href="css/main.css" />
 
@@ -85,10 +86,10 @@
                     <a class="page-scroll" href="#download">Download</a>
 
                   </li>
-                  <li class="nav-item">
+                  <!-- <li class="nav-item">
                     <a class="page-scroll" href="#team">Team</a>
 
-                  </li>
+                  </li> -->
                   <li class="nav-item">
                     <a class="page-scroll" href="#Contact">Contact</a>
 
@@ -346,7 +347,7 @@
   <!-- ========================= download-section end ========================= -->
 
   <!-- ====== Team Section Start -->
-  <section id="team" class="download-section pt-130 pb-130">
+  <!-- <section id="team" class="download-section pt-130 pb-130">
     <div class="container">
       <div class="-mx-4 flex flex-wrap">
         <div class="w-full px-4">
@@ -591,7 +592,7 @@
             </div>
           </div>
         </div>
-  </section>
+  </section> -->
   <!-- ====== Team Section End -->
 
   <!-- Section - Contact -->
