--- a/index.html
+++ b/index.html
@@ -32,7 +32,16 @@
   <link rel="stylesheet" href="css/LineIcons.2.0.css" />
   <link rel="stylesheet" href="css/main.css" />
 
+<!-- Google tag (gtag.js) -->
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y39CRWDGX9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Y39CRWDGX9');
+</script>
 
 </head>
 
@@ -80,7 +89,7 @@
               <div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent">
                 <ul id="nav" class="navbar-nav ml-auto">
                   <li class="nav-item">
-                    <a class="page-scroll" href="#feature">Feature</a>
+                    <a class="page-scroll" href="#feature">Features</a>
                   </li>
                   <li class="nav-item">
                     <a class="page-scroll" href="#download">Download</a>
@@ -741,7 +750,8 @@
 
   <!-- ========================= footer end ========================= -->
 
-  <script src="js/bootstrap.5.0.0.alpha-2-min.js"></script>
+  <!-- <script src="js/bootstrap.5.0.0.alpha-2-min.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
 
   <script src="js/main.js"></script>
 
