--- a/privacy.html
+++ b/privacy.html
@@ -27,11 +27,21 @@
     <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
     <!-- <link href="css/headers.css" rel="stylesheet"> -->
 
-    <link rel="stylesheet" href="css/bootstrap-5.0.0-alpha-2.min.css" />
+    <!-- <link rel="stylesheet" href="css/bootstrap-5.0.0-alpha-2.min.css" /> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha2/dist/css/bootstrap.min.css"/>
+
     <link rel="stylesheet" href="css/LineIcons.2.0.css" />
     <link rel="stylesheet" href="css/main.css" />
 
+     <!-- Google tag (gtag.js) -->
+     <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y39CRWDGX9"></script>
+     <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
 
+          gtag('config', 'G-Y39CRWDGX9');
+      </script>
 
   </head>
 
@@ -68,7 +78,7 @@
                     <li class="nav-item">
                       <a href="index.html#Contact">Contact</a>
 
-                    </li>
+                    
                   </ul>
                 </div>
                 <!-- navbar collapse -->
@@ -265,7 +275,9 @@
     <!-- ========================= footer end ========================= -->
 
 
-    <script src="js/bootstrap.5.0.0.alpha-2-min.js"></script>
+    <!-- <script src="js/bootstrap.5.0.0.alpha-2-min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
+
 
     <script src="js/main.js"></script>
 
